--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <a class="hyperlink-as-button" href="/mini-project/toggle-mode.html">hover mode</a>
             <a class="hyperlink-as-button" href="/mini-project/clock.html">small clock</a>
             <a class="hyperlink-as-button" href="/mini-project/tic-tac-toe.html"> Tic Tac Toe</a>
+            <a class="hyperlink-as-button" href="/mini-project/color-changer.html"> color-changer</a>
             
         </div>
     </body>
