adding the keyboard detector

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <a class="hyperlink-as-button" href="/mini-project/toggle-mode.html">hover mode</a>
             <a class="hyperlink-as-button" href="/mini-project/clock.html">small clock</a>
             <a class="hyperlink-as-button" href="/mini-project/tic-tac-toe.html"> Tic Tac Toe</a>
-            <a class="hyperlink-as-button" href="/mini-project/color-changer.html"> color-changer</a>
+            <a class="hyperlink-as-button" href="/mini-project/color-changer.html"> color-changer</a><br><br>
+            <a class="hyperlink-as-button" href="/mini-project/key-checker.html"> keyboard key detector</a>
             
         </div>
     </body>
